--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 
       </header>
       <section>
-        <h3>Stuart Weir Thomson</h3>
+        <h3>Stuart Weir Thomson B.Eng(Hons) Software Engineering</h3>
 
 <p>Software Engineer | Web Developer | 3D Modeller</p>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>Work Experience </h3>
 
@@ -39,7 +37,7 @@
 
 <p> Asp.Net Developer | TVD | Auckland New Zealand | Nov 2009 - October 2010</p>
 
-          <p>Details of further roles are available on request</p>
+<p>Details of further roles are available on request</p>
       </section>
       <footer>
         <p></p>
