--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
       </header>
       <section>
-        <h3>Stuart Weir Thomson B.Eng(Hons) Software Engineering</h3>
+        <h3>Stuart Weir Thomson</h3>
+        <h2 style="color:#454545">B.Eng(Hons) Software Engineering</h2>
 
 <p>Software Engineer | Web Developer | 3D Modeller</p>
 
-<h3>Work Experience </h3>
+<h2>Work Experience </h2>
 
 <p> Web Developer | Terabyte Interactive | Auckland New Zealand | October 2012 - March 2014</p>
 
