--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       </header>
       <section>
         <h2>Stuart Weir Thomson</h2>
-        <h3 style="color:#454545">B.Eng(Hons) Software Engineering</h3>
+        <!-- <h3 style="color:#454545">B.Eng(Hons) Software Engineering</h3> -->
 
-<p>Software Engineer | Web Developer | 3D Modeller</p>
+<h3>Software Engineer | Web Developer | 3D Modeller</h3>
+
+<img src="/images/MS_Cert_Professional_logo_Blk_rgb.png">
 
 <h3>Work Experience </h3>
 
