--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="wrapper">
       <header>
          <h2>Stuart Weir Thomson</h2>
-       <h3>Software Engineer | Web Developer | 3D Modeller</h3>
+       <h3>Software Engineer | Web Developer</h3>
 
-        <img src="/images/MS_Cert_Professional_logo_Blk_rgb.png">
+        <img src="/images/MS_Cert_Professional_logo_Blk_rgb.png" width="50%">
 
 
         <p class="view"><a href="https://github.com/StuartNZ">View My GitHub Profile</a></p>
