--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="wrapper">
       <header>
          <h2>Stuart Weir Thomson</h2>
-       <h3>Software Engineer | Web Developer</h3>
+       <h3>Software Engineer</h3>
+       <h3>Web Developer</h3>
 
         <img src="/images/MS_Cert_Professional_logo_Blk_rgb.png" width="50%">
 
